                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1

  *) [TS-1630] Add Lua API for TSHttpTxnCacheLookupStatusGet

  *) [TS-1423] Added option to do transparent passthrough on
   connections that are not valid HTTP.

  *) [TS-1599] set OpenSSL allocator with CRYPTO_set_mem_functions

  *) [TS-1624] Remove JEMALLOC_P use, it seems to have been deprecated.

  *) [TS-1500] let ssl_multicert.config specify sslcert per port

  *) [TS-1621] Adopt ConfigUpdateHandler pattern
     Author: Ethan Lai <yzlai@yahoo.com>

  *) [TS-1619] simplify ConfigurationProcessor reconfiguration pattern

  *) [TS-1617] Build cacheurl when experimental plugins are enabled
    Author: Aron Xu.

  *) [TS-1307] [TS-1422] Changed HostDB handling of IPv4 and
   IPv6. Address resolution preferences can be configured globally and
   per HTTP proxy port. Transparent connections can now fail over even
   if use_client_target_addr is set.

  *) [TS-1616] authorization proxy plugin

  *) [TS-1615] Some spelling errors in source code
    Author: Aron Xu.

  *) [TS-1608] IpAllow should use standard config update

  *) [TS-1580] Mutex leak plugged.

  *) [TS-1596] Added channel_stats plugin to experimental.
     Author: Conan Wang.

  *) [TS-1607] decouple SSL certificate lookup

  *) [TS-1506] %<cquuh> log symbol will crash TS when requesting a SSL url.
     Author: Conan Wang.

  *) [TS-1594] ProxyMutexPtr and Ptr<ProxyMutex> are identical

  *) [TS-1591] gzip plugin should load relative config file

  *) [TS-1582] C++11 requires space between strings and format specifiers
     Author: Luca Rea

  *) [TS-1491] Browser always prompts for authentication (NTLM).
     Author: Yakov Kopel.

  *) [TS-1553] Detect and build C++11 dependencies

  *) [TS-1576] reload splitdns.config at runtime
     Author: Ethan Lai <yzlai@yahoo.com>

  *) [TS-1551] reload ssl_multicert.config at runtime
     Author: Ethan Lai <yzlai@yahoo.com>
