@@ -237,7 +237,7 @@ do_stop()
   #   other if a failure occurred
     start-stop-daemon --stop --quiet --retry=QUIT/30/KILL/5 --pidfile $TC_PIDFILE --name $TC_NAME
     RETVAL="$?"
-    test "$RETVAL" != 0 && return 2
+    test "$RETVAL" != 0 && return $RETVAL
   # Wait for children to finish too if this is a daemon that forks
   # and if the daemon is only ever run from this initscript.
   # If the above conditions are not satisfied then add some other code
@@ -245,12 +245,15 @@ do_stop()
   # needed by services started subsequently.  A last resort is to
   # sleep for some time.
     start-stop-daemon --stop --quiet --oknodo --retry=0/30/KILL/5 --exec $TC_DAEMON
-    test "$?" != 0 && return 2
-        # Need to stop the TM and TS also
-    start-stop-daemon --stop --quiet --retry=QUIT/30/KILL/5 --pidfile $TM_PIDFILE --name $TM_NAME
-    test "$?" != 0 && return 2
-    start-stop-daemon --stop --quiet --retry=QUIT/30/KILL/5 --pidfile $TS_PIDFILE --name $TS_NAME
-    test "$?" != 0 && return 2
+    RETVAL="$?"
+    test "$RETVAL" != 0 && return $RETVAL
+  # Need to stop the TM and TS also
+    start-stop-daemon --stop --quiet -oknodo --retry=QUIT/30/KILL/5 --pidfile $TM_PIDFILE --name $TM_NAME
+    RETVAL="$?"
+    test "$RETVAL" != 0 && return $RETVAL
+    start-stop-daemon --stop --quiet -oknodo --retry=QUIT/30/KILL/5 --pidfile $TS_PIDFILE --name $TS_NAME
+    RETVAL="$?"
+    test "$RETVAL" != 0 && return $RETVAL
   # Many daemons don't delete their pidfiles when they exit.
     rm -f $TC_PIDFILE
     rm -f $TM_PIDFILE
@@ -378,7 +381,7 @@ case "$1" in
                     do_start
                     case "$?" in
                         0) log_end_msg 0 ;;
-                        1) log_end_msg 1 ;; # Old process is still running
+                        1) log_end_msg 0 ;; # Daemons were already stopped
                         *) log_end_msg 1 ;; # Failed to start
                     esac
                     ;;
